--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-core-jakarta</artifactId>
+			<version>2.2.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
